--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,49 @@
-version: "3.7"
+version: '3.8'
 
 services:
-  backend:
-    container_name: card-game-backend
-    restart: always
-    build: .
-    environment:
-      - APP_ENV=development
-      - APP_PORT=9000
-    volumes:
-      - ./src:/var/www/card-game/src
-      - ./test:/var/www/card-game/test
-    working_dir: /var/www/card-game
+  card-game:
+    container_name: card-game
+    build:
+      context: .
+      target: development
+      dockerfile: ./Dockerfile
+    command: npm run start:debug
     ports:
-      - "9001:9000"
-    links:
-      - mysql
+      - 9000:9000
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_DATABASE: ${DB_DATABASE}
     depends_on:
-      - mysql
-  mysql: # Example Service
-    container_name: card-game-mysql
-    restart: always
-    image: mysql:5.7
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_USER=card-game
-      - MYSQL_PASSWORD=card-game
-      - MYSQL_DATABASE=card-game-docker
-    ports:
-    - "3308:3306"
+      - card-game-mysql
+    networks:
+      - card-game-network
     volumes:
-    - card-game_mysql_data:/var/lib/mysql
+      - .:/usr/src/app
+    restart: unless-stopped
+    env_file:
+      - .env
 
+  card-game-mysql:
+    container_name: card-game-mysql
+    image: mysql:5.7
+    ports:
+      - 3306:3306
+    volumes:
+      - card-game-data:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_RANDOM_ROOT_PASSWORD: 1
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+    networks:
+      - card-game-network
+    env_file:
+      - .env
 volumes:
-  card-game_mysql_data:
-
-
+  card-game-data:
 networks:
-  default:
-    external:
-      name: card-game
+  card-game-network:
